# celeste-ai-gym

./: .gitignore  CelesteEnv.py  README.md  debug_env.py  get_held_out_states.py  main.py  pyproject.toml  requirements.txt  setup.py  test_wrappers.py  utils.py  wrappers.py
celeste_ai_gym/: CelesteEnv.py  __init__.py  action_wrapper.py
