[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "celeste-ai-gym"
version = "0.1.0"
description = "A Gymnasium-compatible environment for Celeste gameplay"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ethan"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "gymnasium>=0.29.0",
    "numpy>=1.20.0",
    "opencv-python>=4.0.0",
    "pillow>=8.0.0",
    "mss>=6.0.0",
    "python-dotenv>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/celeste-ai-gym"
Repository = "https://github.com/yourusername/celeste-ai-gym"

[tool.setuptools.packages.find]
where = ["."]
include = ["celeste_ai_gym*"]

[tool.setuptools.package-data]
celeste_ai_gym = ["*.py"]
